try to fix horizontal scrollbar

--- a/css/stylish-portfolio.scss
+++ b/css/stylish-portfolio.scss
@@ -242,8 +242,8 @@ body {
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
 
-  width: 32%;
-  width: 32vw;  
+  width: 45%;
+  width: 45vw;  
   min-width: 280px;
 }
 
